objects/tdc_tvte__VTM_History__c/tdc_tvte__VTM_History__c.object-meta.xml
<CustomObject>
    <label>Verify The Email/Phone History</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>VTM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verify The Email/Phone History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>