objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Account__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Verify The Email/Phone History</relationshipLabel>
    <relationshipName>Verify_The_Email_Phone_History</relationshipName>
    <type>Lookup</type>
</CustomField>