objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Caller_Type__c</fullName>
    <label>Caller Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>