objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Carrier_name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Carrier_name__c</fullName>
    <label>Carrier name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>