objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Contact__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verify The Email/Phone History</relationshipLabel>
    <relationshipName>Verify_The_Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>