objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Email__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>