objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Email_Verification_Status__c</fullName>
    <formula>CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Deliverable2.png&apos;, &apos;Deliverable&apos;), 
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Non-deliverable2.png&apos;, &apos;Not Deliverable&apos;), 
&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Risky2.png&apos;, &apos;Risky&apos;),
&apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Unknown2.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c,&apos; &apos;
, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Not verified Yet2.png&apos;, &apos;Not Verified Yet&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Verification Status</label>
    <type>Text</type>
</CustomField>