objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>