objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Error_Msg__c</fullName>
    <label>Error Msg</label>
    <type>TextArea</type>
</CustomField>