objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Verify_The_Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>