objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>