objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Phone_API__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone_API__c</fullName>
    <label>Phone API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>