objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Phone_Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone_Verification_Result__c</fullName>
    <label>Phone Verification Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>