objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Phone_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone_Verification_Status__c</fullName>
    <formula>CASE(tdc_tvte__Phone_Verification_Result__c, &apos;Valid&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/ValidPhone.png&apos;, &apos;Valid&apos;),
&apos;Invalid&apos;,IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/InvalidPhone.png&apos;,&apos;Invalid&apos;),&apos;&apos;)</formula>
    <label>Phone Verification Status</label>
    <type>Text</type>
</CustomField>