objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__RelatedObjectId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__RelatedObjectId__c</fullName>
    <label>Related Object Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>