objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Result__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Result__c</fullName>
    <label>Result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>