objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__test__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>test</label>
    <referenceTo>tdc_tvte__test__c</referenceTo>
    <relationshipName>Verify_The_Email_History</relationshipName>
    <type>Lookup</type>
</CustomField>