objects/tdc_tvte__VTM_History__c/fields/tdc_tvte__Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Verification_Type__c</fullName>
    <label>Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>