objects/tdc_tvte__VTM_History__c/recordTypes/tdc_tvte__VerifyEmailHistory.recordType-meta.xml
<RecordType>
    <fullName>tdc_tvte__VerifyEmailHistory</fullName>
    <active>true</active>
    <label>Email</label>
</RecordType>