objects/tdc_tvte__VTM_History__c/recordTypes/tdc_tvte__VerifyPhoneHistory.recordType-meta.xml
<RecordType>
    <fullName>tdc_tvte__VerifyPhoneHistory</fullName>
    <active>true</active>
    <label>Phone</label>
</RecordType>