objects/tdc_tvte__VTM_History__c/listViews/tdc_tvte__Alll.listView-meta.xml
<ListView>
    <fullName>tdc_tvte__Alll</fullName>
    <columns>NAME</columns>
    <columns>tdc_tvte__Email__c</columns>
    <columns>tdc_tvte__Result__c</columns>
    <columns>tdc_tvte__Contact__c</columns>
    <columns>tdc_tvte__Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Alll</label>
</ListView>